[workspace]
members = [
  "rustsat",
  "tools",
  "cadical",
  "kissat",
  "glucose",
  "minisat",
  "ipasir",
  "solvertests",
  "capi",
  "pyapi",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.83"
atty = "0.2.14"
bzip2 = "0.4.4"
cc = { version = "1.0.97", features = ["parallel"] }
chrono = "0.4.31"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
cmake = "0.1.50"
concolor-clap = "0.1.0"
cpu-time = "1.0.0"
flate2 = { version = "1.0.30", features = [
  "zlib-ng",
], default-features = false }
git2 = "0.18.3"
glob = "0.3.1"
nom = "7.1.3"
termcolor = "1.4.1"
thiserror = "1.0.60"
rand = "0.8.5"
rand_chacha = "0.3.1"
rustc-hash = "1.1.0"
signal-hook = "0.3.17"
visibility = "0.1.0"
xz2 = "0.1.7"

[profile.profiling]
inherits = "release"
debug = 1
